# Ascend

./: .clang-tidy  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md  TODO.md  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
Scripts/: tree.txt
Scripts/components/: Attack.cs  AttributePoints.cs  Attributes.cs  Health.cs  Mana.cs  Progression.cs  Speed.cs
Scripts/config/: BalanceConfig.cs
Scripts/core/: Entity.cs  IdManager.cs
Scripts/flow/: BattleLoop.cs
Scripts/systems/: AttributeSystem.cs  CombatSystem.cs  LevelSystem.cs
Scripts/testing/: CombatTest.cs
Unity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
apps/cli/: package.json  tsconfig.json
content/canon/: enemies.yaml  equipment.yaml  origins.yaml  skills.yaml  starter-adventure.yaml  trails.yaml
include/: Atributos.hpp  Entidade.hpp  HabilidadeAtiva.hpp  HabilidadePassiva.hpp  Habilidades.hpp  Inimigo.hpp  Player.hpp  entidade.hpp
scripts/: build-android-dev.sh  profile-android-smoke.sh  test-editmode.sh
src/: Atributos.cpp  CMakeLists.txt  Entidade.cpp  HabilidadeAtiva.cpp  HabilidadePassiva.cpp  Habilidades.cpp  Inimigo.cpp  Player.cpp  entidade.cpp
tests/: CMakeLists.txt  bootstrap_smoke.cpp
(+111 files in other folders)
